...
                  RaisedButton(
                    onPressed: _toggleImagesCreator(0),
                    child: Text('Ascensions'),
                  ),
                  RaisedButton(
                    onPressed: _toggleImagesCreator(1),
                    child: Text('Sprites'),
                  ),
                ],
              ),
            ],
          ),
        ),
...
      items: [
        BottomNavigationBarItem(
          title: Text('Status'),
          icon: Icon(Icons.accessibility),
        ),
        BottomNavigationBarItem(
          title: Text('Biography'),
          icon: Icon(Icons.comment),
        ),
      ],
    );
  }

...
