...
  //   });

  //   final listTiles = snapshot.map((data) {
  //     return _buildListItem(context, data);
  //   }).toList();
  //   return ListView(
  //     key: Key('servants_list'),
  //     children: ListTile.divideTiles(
  //       context: context,
  //       tiles: listTiles,
  //     ).toList(),
  //   );
  // }
...
